--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pict-service-commandlineutility",
-    "version": "1.0.17",
+    "version": "1.0.18",
     "description": "Pict Command-Line Utility Service",
     "main": "source/Pict-CLIProgram-CommandLineUtility.js",
     "scripts": {
@@ -11,8 +11,11 @@
         "build": "npx quack build",
         "docker-dev-build": "docker build ./ -f Dockerfile_LUXURYCode -t pict-service-commandlineutility-image:local",
         "docker-dev-run": "docker run -it -d --name pict-service-commandlineutility-dev -p 48068:8080 -p 37276:8086 -v \"$PWD/.config:/home/coder/.config\"  -v \"$PWD:/home/coder/pict-service-commandlineutility\" -u \"$(id -u):$(id -g)\" -e \"DOCKER_USER=$USER\" pict-service-commandlineutility-image:local",
-        "docker-dev-shell": "docker exec -it pict-service-commandlineutility-dev /bin/bash"
+        "docker-dev-shell": "docker exec -it pict-service-commandlineutility-dev /bin/bash",
+        "types": "tsc -p ./tsconfig.build.json",
+        "check": "tsc -p . --noEmit"
     },
+    "types": "types/Pict-CLIProgram-CommandLineUtility.d.ts",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/stevenvelozo/pict-service-commandlineutility.git"
@@ -24,11 +27,15 @@
     },
     "homepage": "https://github.com/stevenvelozo/pict-service-commandlineutility#readme",
     "devDependencies": {
-        "quackage": "^1.0.45"
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^16.18.126",
+        "quackage": "^1.0.47",
+        "typescript": "^5.9.3"
     },
     "dependencies": {
         "commander": "^14.0.2",
-        "pict": "^1.0.343"
+        "fable-serviceproviderbase": "^3.0.16",
+        "pict": "^1.0.345"
     },
     "mocha": {
         "diff": true,
